logs commit