@@ -4,10 +4,11 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
 import org.springframework.dao.EmptyResultDataAccessException;
-
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.jdbc.core.namedparam.SqlParameterSource;
@@ -25,10 +26,13 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
 	
 	@Autowired
 	NamedParameterJdbcTemplate template;
-	
+	private static final Logger logger = LogManager.getLogger(TenantRepoDaoImpl.class); // Initialize logger
+
 	@Transactional
 	@Override
 	public int addTenant(Tenants tenants) {
+	    logger.info("Adding a new tenant: {}", tenants.getTenantName());
+
 		UUID uuid = UUID.randomUUID();
         String tenantUuid = uuid.toString();
 		String insertTenant = "INSERT INTO tenants (tenant_uuid, tenant_name, address, contact_email, contact_phone, tenant_country, tenant_state, tenant_city) VALUES (:tenantId, :tenantName, :address, :email, :phone, :tenantCountry, :tenantState, :tenantCity)";
@@ -41,7 +45,8 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
 				.addValue("tenantCountry", tenants.getCountry())
 				.addValue("tenantState", tenants.getState())
 				.addValue("tenantCity", tenants.getCity());
-		
+        logger.info("Tenant added successfully with UUID: {}", tenantUuid);
+
 		return template.update(insertTenant, param);
 		
 	}
@@ -49,23 +54,31 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
 	@Transactional
 	@Override
 	public List<Tenants> getAllTenants() {
+	    logger.info("Fetching all tenants with active status");
+
 		String sql = "SELECT tenant_uuid, tenant_name, address, contact_email, contact_phone, tenant_country, tenant_state, tenant_city FROM tenants WHERE tenant_status = :status";
 		SqlParameterSource param = new MapSqlParameterSource()
 				.addValue("status", 1);
+	   
+
 		return template.query(sql, param, new TenantRowMapper());
 	}
 
 	@Transactional
 	// Method to check if a tenant exists by tenantId
 	public Optional<Tenants> findById(String tenantId) {
+	    logger.info("Fetching tenant details for tenantId: {}", tenantId);
+
         String sql = "SELECT tenant_uuid, tenant_name, address, contact_email, contact_phone, tenant_country, tenant_state, tenant_city FROM tenants WHERE tenant_uuid = :tenantId";
         SqlParameterSource param = new MapSqlParameterSource().addValue("tenantId", tenantId);
 
         try {
             Tenants tenant = template.queryForObject(sql, param, new TenantRowMapper());
+            logger.info("Tenant found with tenantId: {}", tenantId);
+
             return Optional.ofNullable(tenant);
         } catch (EmptyResultDataAccessException e) {
-            // Return an empty Optional if no tenant found
+            logger.warn("No tenant found with tenantId: {}", tenantId);
             return Optional.empty();
         }
     }
@@ -74,13 +87,23 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
     // Method to update the tenant
 	@Override
     public int updateTenant(Tenants tenant) {
-        // Check if tenant exists before trying to update
-        Optional<Tenants> existingTenant = findById(tenant.getTenantUuid());
+	    logger.info("Updating tenant with tenantUuid: {}", tenant.getTenantUuid());
+
+		 if (tenant.getTenantUuid().trim().isBlank()) {
+		        logger.error("Tenant UUID is null or empty");
+
+		        throw new TenantIdNullException(HrManagementEnum.Tenant_id_null);
+		    }
+       // Check if tenant exists before trying to update
+       try { 
+		Optional<Tenants> existingTenant = findById(tenant.getTenantUuid());
 
         if (!existingTenant.isPresent()) {
-            // If the tenant does not exist, return -1 to indicate failure
+            logger.warn("Tenant with UUID {} not found, unable to update", tenant.getTenantUuid());
             return -1;
         }
+        
+       
 
         // SQL query for updating the tenant details
         String sql = "UPDATE tenants SET tenant_name = :tenantName, address = :address, " +
@@ -97,14 +120,10 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
             .addValue("tenantState", tenant.getState())
             .addValue("tenantCity", tenant.getCity());
 
-        try {
-            // Execute the update query
+        logger.info("Tenant with UUID {} updated successfully", tenant.getTenantUuid());
             return template.update(sql, param);
         } catch (DataAccessException e) {
-                 e.printStackTrace();
-            // Log any database access errors and return 0 or throw a custom exception
-//            log.error("Error updating tenant in the database: {}", e.getMessage());
-        	System.out.println("tenant update");
+            logger.error("Error updating tenant with tenantUuid: {}", tenant.getTenantUuid(), e);
             return 0;  // Indicating failure to update
         }
     }
@@ -112,7 +131,11 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
 	@Transactional
     @Override
     public int deleteTenant(String tenantId) {
-        if (tenantId == null || tenantId.trim().isEmpty()) {
+	    logger.info("Attempting to delete tenant with tenantId: {}", tenantId);
+
+        if (tenantId.trim().isBlank()) {
+            logger.error("Tenant ID is null or empty");
+
             throw new TenantIdNullException(HrManagementEnum.Tenant_id_null);
         }
 
@@ -128,18 +151,20 @@ public class TenantRepoDaoImpl implements TenantRepoDao{
 
             // If the tenant UUID doesn't exist in the result list, return -1 (tenant not found)
             if (tenantUuids.isEmpty()) {
+                logger.warn("Tenant with UUID {} not found, cannot delete", tenantId);
                 return -1; // Tenant not found
             }
 
             // Soft delete query
             String softDelete = "UPDATE tenants SET tenant_status = :status WHERE tenant_uuid = :tenantId";
             param.addValue("status", 0);  // Assuming 0 represents deleted status
-            
+            logger.info("Tenant with UUID {} successfully deleted", tenantId);
+
             // Perform the update (soft delete)
             return template.update(softDelete, param);
             
         } catch (Exception e) {
-            // Log exception here (optional), rethrow or handle the exception
+            logger.error("Error deleting tenant with tenantId: {}", tenantId, e);
             return 0;  // Indicates failure
         }
     }
